objects/Weekly_Report__c.object
<CustomObject>
    <description>Object used to display the weekly status of opportunities</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <description>Name of the person who is responsible for the action items.</description>
        <inlineHelpText>Please enter the name of the person responsible for this action item.</inlineHelpText>
        <label>Action Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_from_SOP_call__c</fullName>
        <description>Actions or comments from SOP call.</description>
        <inlineHelpText>Actions or comments from SOP call.</inlineHelpText>
        <label>Actions from SOP call</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Please enter a comment or brief description about your weekly highlight.</description>
        <inlineHelpText>Please enter a comment or brief description about your weekly highlight.   If product related, please enter both the PCN and product description.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expected_Order_Amount__c</fullName>
        <label>Expected Order Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LUX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this issue due to the Aldridge and Falkenberg closure?</description>
        <inlineHelpText>Is this issue due to the Aldridge and Falkenberg closure? If yes, please tick the box, if not, please leave blank.</inlineHelpText>
        <label>LUX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <description>Manufacturing Site</description>
        <inlineHelpText>Please select a Manufacturing site if applicable.</inlineHelpText>
        <label>Manufacturing Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OB (Ottobrunn)</fullName>
                </value>
                <value>
                    <fullName>FB (Falkenberg)</fullName>
                </value>
                <value>
                    <fullName>PL (Pilsen)</fullName>
                </value>
                <value>
                    <fullName>WH (Witham)</fullName>
                </value>
                <value>
                    <fullName>AL (Altheridge)</fullName>
                </value>
                <value>
                    <fullName>GV (Gevrey)</fullName>
                </value>
                <value>
                    <fullName>WO (Wohlen)</fullName>
                </value>
                <value>
                    <fullName>RPG (Bangalore)</fullName>
                </value>
                <value>
                    <fullName>GP (Golden Phoenix)</fullName>
                </value>
                <value>
                    <fullName>IN (India)</fullName>
                </value>
                <value>
                    <fullName>ZD (Zibo Domaster)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Management</label>
        <referenceTo>Product_Management__c</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <label>Market Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power Generation Nuclear</fullName>
                </value>
                <value>
                    <fullName>Power Generation Solar</fullName>
                </value>
                <value>
                    <fullName>Power Generation Other</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Underground</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Sub-station</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution Industrial</fullName>
                </value>
                <value>
                    <fullName>Industry Railway</fullName>
                </value>
                <value>
                    <fullName>Industry Mining</fullName>
                </value>
                <value>
                    <fullName>Industry Petrol Chemical</fullName>
                </value>
                <value>
                    <fullName>Industry Building/Construction</fullName>
                </value>
                <value>
                    <fullName>Industry Other</fullName>
                </value>
                <value>
                    <fullName>Crompton Metering</fullName>
                </value>
                <value>
                    <fullName>Distribution &amp; Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Penalty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk &amp; Penalty</label>
        <referenceTo>Risk_Penalty__c</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>To_be_review_on_Monday_SOP_call__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open: LT issue</fullName>
                    <default>true</default>
                    <label>Open: LT issue</label>
                </value>
                <value>
                    <fullName>Open: Pricing</fullName>
                </value>
                <value>
                    <fullName>Open: Tec/PM issue</fullName>
                </value>
                <value>
                    <fullName>Open: Quality issue</fullName>
                </value>
                <value>
                    <fullName>Closed and fixed</fullName>
                </value>
                <value>
                    <fullName>Closed and not fixed</fullName>
                </value>
                <value>
                    <fullName>Open: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_be_highligted_to_mgt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This information will be escalated to management (ELT)</inlineHelpText>
        <label>To be highligted to mgt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_be_review_on_Monday_SOP_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This needs to be review during SOP Monday call by Planning, PM or qulity department</description>
        <inlineHelpText>This needs to be review during SOP Monday call by Planning, PM or qulity department</inlineHelpText>
        <label>To be review on Monday SOP call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsedForTrigger__c</fullName>
        <label>UsedForTrigger</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Report_Region__c</fullName>
        <formula>TEXT(CreatedBy.User_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Report Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Biz_Impacted__c</fullName>
        <description>The USD value of the Yearly Biz that has been impacted.  Please enter this value in actual dollars.</description>
        <inlineHelpText>Please enter the value in actual USD.</inlineHelpText>
        <label>Yearly Biz Impacted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Weekly Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WR {MM}/{DD}/{YYYY}-{0}</displayFormat>
        <label>Weekly Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>